--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
-<meta property="og:image" content="img/thumb.png"/>
+<meta property="og:image" content="img/thumb.png">
 <style>body{background-color:white;}</style>
 <script src="lib/htmlwidgets-1.5.4/htmlwidgets.js"></script><script src="lib/trelliscopejs_widget-0.3.2/trelliscope.min.js"></script><script src="lib/trelliscopejs_widget-binding-0.2.6/trelliscopejs_widget.js"></script><title>Well log data summary for 118 wells from the Norwegian North Sea</title>
 <link rel="icon" type="image/png" href="img/favicon.png">
